[gd_scene load_steps=2 format=3 uid="uid://cd7oyt073aqg7"]

[ext_resource type="Script" path="res://scenes/ui/dialog.gd" id="1_xjvw4"]

[node name="Dialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xjvw4")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -200.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="CharacterName" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Nome"

[node name="Text" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Texto do di√°logo..."

[node name="LeftCharacter" type="AnimatedSprite2D" parent="."]
position = Vector2(200, 400)
scale = Vector2(6, 6)

[node name="RightCharacter" type="AnimatedSprite2D" parent="."]
position = Vector2(824, 400)
scale = Vector2(6, 6)
